--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "start"
+    "test": "start",
+    "dev": "nodemon server.js" 
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
