--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.6"
   },
