--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.1.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
